Sidemenu and content resize on smaller windows This resolves #1 This resolves #6

--- a/styles/main.css
+++ b/styles/main.css
@@ -371,5 +371,5 @@ body {
 .contentSide
 {
     border:1px solid rgba(168, 168, 168, 0.56);
-	margin-top:10px;
+	margin:10px;
 }
